Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -14,18 +14,28 @@
     <h2>About Me</h2>
 
     <ul>
-      <li>I was born in Oberhausen, Germany, where I spent the first about 20 years
-      of my life.</li>
-      <li>I studied physics and did my PhD in theoretical physics.</li>
-      <li>I live in Frankfurt, Germany, with my wife and my small son.</li>
-      <li>I am a vegetarian.</li>
-      <li>I love freshly ground and brewed coffee, preferably prepared with a
-      French Press.</li>
-      <li>I practice Ashtanga yoga every day and have a love-hate relationship
-        with it.
-      </li>
-      <li>I strive to keep things as simple as possible in most areas of my life
-      (one example being this website).</li>
+      <li><p>I was born in Oberhausen, Germany, where I spent the first about 20
+      years of my life.</p></li>
+
+      <li><p>I studied physics and did my PhD in theoretical physics.</p></li>
+
+      <li><p>I live in Frankfurt, Germany, with my wife and my small
+      son.</p></li>
+
+      <li><p>I am a vegetarian.</p></li>
+
+      <li><p>I love freshly ground and brewed coffee, preferably prepared with a
+      French Press.</p></li>
+
+      <li><p>I practice Ashtanga yoga every day and have a love-hate
+      relationship with it.</p> </li>
+
+      <li><p>I love the <a href="https://www.openbsd.org/">OpenBSD</a> operating
+      system (see my <a href="/openbsd/">OpenBSD page</a>) and the vi editor
+      (see my <a href="/vi">vi page</a>).</p></li>
+
+      <li><p>I strive to keep things as simple as possible in most areas of my
+      life (one example being this website).</p></li>
     </ul>
 
     <h2>About This Site</h2>
@@ -48,20 +58,24 @@
 
     <ul>
       <li>Plain and simple on purpose.</li>
+
       <li>
-        Marked up with <a
+        <p>Marked up with <a
         href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fthorstenzoeller.com%2F">W3C
-        validated HTML5</a>.
+        validated HTML5</a>.</p>
       </li>
+
       <li>
-        Styled with <a
+        <p>Styled with <a
         href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fthorstenzoeller.com%2Fstyle.css&profile=css3svg&usermedium=all&warning=1&vextwarning=">W3C
-        validated CSS Level 3</a>.
+        validated CSS Level 3</a>.</p>
       </li>
+
       <li>
-        <a
+        <p><a
         href="https://github.com/thorstenzoeller/thorstenzoeller.github.io">Hosted
-        on GitHub</a> with <a href="https://pages.github.com/">GitHub Pages</a>.
+        on GitHub</a> with <a href="https://pages.github.com/">GitHub
+        Pages</a>.</p>
       </li>
     </ul>
 
