Update uses page

--- a/uses/index.html
+++ b/uses/index.html
@@ -106,11 +106,10 @@
       <dd>
         <p>Ideally, I would only be using <a
         href="http://www.mutt.org/">Mutt</a>.  Due to the proliferation of HTML
-        e-mails, however, this is simply not feasible any more.  RainLoop is the
-        best alternative I know of.</p>
-
-        <p>See <a href="/rainloop-on-openbsd/">Installation and Setup of the
-        RainLoop Webmail Client on OpenBSD</a>.</p>
+        e-mails, however, this is simply not feasible any more.  RainLoop is a
+        webmail client and the best alternative I know of, and really simple to
+        set up (see <a href="/rainloop-on-openbsd/">Installation and Setup of
+        the RainLoop Webmail Client on OpenBSD</a>).</p>
       </dd>
 
       <dt><a href="https://mupdf.com/">MuPDF</a></dt>
