Update 'Finds & Thoughts'

--- a/finds/index.html
+++ b/finds/index.html
@@ -14,6 +14,13 @@
     <h2>Finds &amp; Thoughts</h2>
 
     <dl>
+      <dt class="date">2022-01-09</dt>
+      <dd>
+        <p><a href="https://www.taschenhirn.de/">Taschenhirn.de</a>: Knowledge
+        database containing lots of interesting data in the form of lists
+        organized into different categories (German only).</p>
+      </dd>
+
       <dt class="date">2021-12-20</dt>
       <dd>
         <p>I hate Ashtanga Yoga. And I love it.</p>
