Update OpenBSD page

--- a/openbsd/index.html
+++ b/openbsd/index.html
@@ -143,6 +143,12 @@
       </li>
 
       <li>
+        <p><a href="http://astro-gr.org/openbsd/">OpenBSD &#8211; Astro-GR</a>
+        &ndash; Web site of Pau Amaro Seoane with useful information on
+        OpenBSD.</p>
+      </li>
+
+      <li>
         <p><a href="https://jcs.org/tagged/openbsd">OpenBSD articles on Joshua
         Stein's blog</a></p>
       </li>
